--- a/client/dev/app/app.css
+++ b/client/dev/app/app.css
@@ -1,3 +1,27 @@
 body {
   font-family: "Roboto";
+  margin: 0;
+}
+
+main {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+a {
+  color: #4682b4;
+  padding: 1px;
+  text-decoration: none;
+}
+
+a:hover {
+  border-bottom: 2px solid #4682b4;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
 }
